--- a/Website/ShadowFlare.html
+++ b/Website/ShadowFlare.html
@@ -1,7 +1,11 @@
+<!-- Always add Doctype -->
 <!DOCTYPE html>
 <html>
     <head>
+        <!-- Page Title -->
         <title>ShadowFlare</title>
+
+        <!-- CSS Link -->
         <link rel="stylesheet" type="Text/css" href="CSS/style.css">
     </head>
     <body>
@@ -13,4 +17,6 @@
             <a href="StormStarbrickYT.html">StormStarbrickYT</a>
             <a href="ShadowFlare.html" class="active">ShadowFlare</a>
             <a href="StormCrewYT.html">StormCrewYT</a>
-          </div>
+        </div>
+    </body>
+</html>
