Randome tinkering (mostly comments)

--- a/Website/StormCrewYT.html
+++ b/Website/StormCrewYT.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <!-- Page Title -->
         <title>StormCrewYT</title>
+
+        <!-- CSS Link -->
         <link rel="stylesheet" type="Text/css" href="CSS/scyt.css">
     </head>
     <body>
@@ -13,8 +16,8 @@
             <a href="StormStarbrickYT.html">StormStarbrickYT</a>
             <a href="ShadowFlare.html">ShadowFlare</a>
             <a href="StormCrewYT.html" class="active">StormCrewYT</a>
-          </div>
-
+        </div>
+        <!-- Page Banner -->
         <div align="center" class="card">
             <img src="images/StormCrew V2 (Chrome).png" alt="StormCrewYT" class="GlowStorm">
         </div>
