--- a/Website/index.html
+++ b/Website/index.html
@@ -18,6 +18,7 @@
             <img src="images/ShadowStorm.png" alt="ShadowStormYT" height="500px" width="auto">
         <div align="center">
 
+            <!-- Welcome Message -->
             <h1>Welcome to ShadowStormYT's Official Website</h1>
         </div>
     </body>
